Adding Illustrator source file and updating manifest

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "options_page": "options.html",
   "browser_action": {
     "popup": "popup.html",
+    "default_icon": "ComicNav.png",
     "default_title": "ComicNav"
   },
   "permissions": [
